# oss-notifier-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/: logfire-instrumentation
.claude/skills/: building-pydantic-ai-agents
.github/workflows/: ci.yml  notify.yml
agent/: config.py  logging.py
agent/agents/: __init__.py  single.py  supervisor.py  tool_calling.py
agent/pipeline/: config.py  email.py  github_client.py  models.py  run.py
agent/prompts/: __init__.py  system.txt  templates.py
agent/tools/: example.py
evals/: conftest.py  judge.py  test_llm_judge.py  test_pass_fail.py
evals/fixtures/: example.json
scripts/: choose_pattern.py
tests/: conftest.py  test_config.py  test_email.py  test_example.py  test_github_client.py  test_pipeline_config.py  test_pipeline_run.py  test_stubs.py
